--- a/index.html
+++ b/index.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body>
+	<head>
+		<title>WAJID ALI, WORLD</title>
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi Guys, Hope you are doing well! I'm Wajid Ali From Malaysia, Cyberjaya!</h1>
+				<p>WE WILL ALL TOGETHER KILL THIS CORONA VIRUS.</em> PLEASE STAY HOME & SAFE THE WORLD <a href="/about">Keep washing your hands.. Click below for corona virus live update...</a></p>
+    		<div class="col-md-3">
+			<marquee behavior="scroll" direction="left">By Staying at Home Save your/others life!</marquee>
+			<marquee behavior="scroll" direction="right">Please take it seriously</marquee>
+			<marquee behavior="alternate" scrollamount="5"><img src="/virus.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
+<marquee behavior="alternate" scrollamount="10"><img src="/virus.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
+<marquee behavior="alternate" scrollamount="12"><img src="/virus.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
+<marquee behavior="alternate" scrollamount="15"><img src="/virus.jpg" width="72" height="79" alt="Buzzy bee"></marquee>
+                        <marquee behavior="scroll" direction="left" scrollamount="1">Wajid Ali...</marquee>
+<marquee behavior="scroll" direction="left" scrollamount="5">Is...</marquee>
+<marquee behavior="scroll" direction="left" scrollamount="10">Owner...</marquee>
+<marquee behavior="scroll" direction="left" scrollamount="15">Of this site!</marquee>
 
-<div class="w3-container">
-  <h2>W3.CSS Login Modal</h2>
-
-  <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-green w3-large">Login</button>
-
-  <div id="id01" class="w3-modal">
-    <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="max-width:600px">
-  
-      <div class="w3-center"><br>
-        <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-xlarge w3-transparent w3-display-topright" title="Close Modal">×</span>
-        <img src="img_avatar4.png" alt="Avatar" style="width:30%" class="w3-circle w3-margin-top">
-      </div>
-
-      <form class="w3-container" action="/action_page.php">
-        <div class="w3-section">
-          <label><b>Username</b></label>
-          <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" name="usrname" required>
-          <label><b>Password</b></label>
-          <input class="w3-input w3-border" type="text" placeholder="Enter Password" name="psw" required>
-          <button class="w3-button w3-block w3-green w3-section w3-padding" type="submit">Login</button>
-          <input class="w3-check w3-margin-top" type="checkbox" checked="checked"> Remember me
-        </div>
-      </form>
-
-      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-        <button onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-button w3-red">Cancel</button>
-        <span class="w3-right w3-padding w3-hide-small">Forgot <a href="#">password?</a></span>
-      </div>
-
-    </div>
-  </div>
-</div>
-            
-</body>
+			
+			<img class="mySlides" src="/shah.jpg" alt="logo" height="400">
+			
+		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:wajidali3301@gmail.com">email-wajidali3301@gmail.com</a></li>
+			<li><a href="https://www.facebook.com/wajid3301">MyFacebook</a></li>
+        		<li><a href="https://infographics.channelnewsasia.com/covid-19/map.html">LIVE-CORONAVIRUS-UPDATE</a></li>
+			</ul>
+		</footer>
+	</body>
 </html>
