--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("https://github.com/wajidworld/wajidworld.github.io/blob/master/ali.jpg");
+  background-image: url("/github.com/wajidworld/wajidworld.github.io/blob/master/ali.jpg");
   min-height: 75%;
 }
 
