--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
+  <div style="background-image:url('[/github.com/wajidworld/wajidworld.github.io/blob/master/ali.jpg]');">
   background-image: url("/github.com/wajidworld/wajidworld.github.io/blob/master/ali.jpg");
   min-height: 75%;
 }
