--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
-  <div style="background-image:url('[/github.com/wajidworld/wajidworld.github.io/blob/master/ali.jpg]');">
-  background-image: url("/github.com/wajidworld/wajidworld.github.io/blob/master/ali.jpg");
+  background-image: url("");
   min-height: 75%;
 }
 
@@ -123,7 +122,7 @@ body, html {
       <h5>Soda</h5>
       <p class="w3-text-grey">Coke, Sprite, Fanta, etc. 2.50</p>
     </div>  
-    <img src="/w3images/coffeehouse2.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
+    <img src="/ali.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
   </div>
 </div>
 
