--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@ body, html {
   font-family: "Inconsolata", sans-serif;
 }
 
-.bgimg {
-  background-position: center;
-  background-size: cover;
-  background-image: url("");
-  min-height: 75%;
+</div>  
+    <img src="/ali.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
+  </div>
 }
 
 .menu {
