--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@ body, html {
   font-family: "Inconsolata", sans-serif;
 }
 
-</div>  
+backgroud {  
     <img src="/ali.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
-  </div>
-}
+   }
 
 .menu {
   display: none;
