--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@ body, html {
   font-family: "Inconsolata", sans-serif;
 }
 
-backgroud {  
-    <img src="/ali.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
-   }
+.bgimg {
+  background-position: center;
+  background-size: cover;
+  background-image: url("/ali.jpg");
+  min-height: 75%;
+}
 
 .menu {
   display: none;
@@ -65,7 +68,7 @@ backgroud {
       <p><i>"Use products from nature for what it's worth - but never too early, nor too late." Fresh is the new sweet.</i></p>
       <p>Chef, Coffeeist and Owner: Liam Brown</p>
     </div>
-    <img src="/w3images/coffeeshop.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="/ali.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
     <p><strong>Address:</strong> 15 Adr street, 5015, NY</p>
   </div>
@@ -128,7 +131,7 @@ backgroud {
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WHERE TO FIND US</span></h5>
     <p>Find us at some address at some place.</p>
-    <img src="/w3images/map.jpg" class="w3-image" style="width:100%">
+    <img src="/ali.jpg" class="w3-image" style="width:100%">
     <p><span class="w3-tag">FYI!</span> We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste.</p>
     <p><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
     <form action="/action_page.php" target="_blank">
