--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("/shah.jpg");
+  background-image: url("/shah2.jpg");
   min-height: 75%;
 }
 
