--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body, html {
     <span class="w3-tag">Open from 6am to 5pm</span>
   </div>
   <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:90px">Wajid<br>&<br>Farheen<br>Cafe</span>
+    <span class="w3-text-white" style="font-size:50px">Wajid&Farheen<br>Cafe</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
     <span class="w3-text-white">15 Adr street, 5015</span>
