--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body, html {
     </div>
     <img src="/shah3.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
-    <p><strong>Address:</strong> civil Bijnor, 2476701 UP</p>
+    <p><strong>Address:</strong> civil Line, Bijnor, 2476701 UP, India</p>
   </div>
 </div>
 
