--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body, html {
     <span class="w3-text-white" style="font-size:50px">Wajid Bijnor<br>Cafe</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">15 Adr street, 5015</span>
+    <span class="w3-text-white">Civil line,Bijnor 246701</span>
   </div>
 </header>
 
