--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("/shah2.jpg");
+  background-image: url("/Paint2.jpg");
   min-height: 75%;
 }
 
@@ -48,7 +48,7 @@ body, html {
     <span class="w3-tag">Open from 6am to 5pm</span>
   </div>
   <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:50px">Wajid Bijnor<br>Cafe</span>
+    <span class="w3-text-white" style="font-size:50px">Royal Asian Paint<br>Bijnor</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
     <span class="w3-text-white">Civil line,Bijnor 246701</span>
@@ -68,7 +68,7 @@ body, html {
       <p><i>"Use products from nature for what it's worth - but never too early, nor too late." Fresh is the new sweet.</i></p>
       <p>Chef, Coffeeist and Owner: Liam Brown</p>
     </div>
-    <img src="/shah3.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="/Paint2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
     <p><strong>Address:</strong> civil Line, Bijnor, 2476701 UP, India</p>
   </div>
@@ -122,7 +122,7 @@ body, html {
       <h5>Soda</h5>
       <p class="w3-text-grey">Coke, Sprite, Fanta, etc. 2.50</p>
     </div>  
-    <img src="/shah3.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
+    <img src="/Paint2.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
   </div>
 </div>
 
@@ -131,7 +131,7 @@ body, html {
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WHERE TO FIND US</span></h5>
     <p>Find us at some address at some place.</p>
-    <img src="/shah3.jpg" class="w3-image" style="width:100%">
+    <img src="/Paint2.jpg" class="w3-image" style="width:100%">
     <p><span class="w3-tag">FYI!</span> We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste.</p>
     <p><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
     <form action="/action_page.php" target="_blank">
