--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ body, html {
       <h5>Soda</h5>
       <p class="w3-text-grey">Coke, Sprite, Fanta, etc. 2.50</p>
     </div>  
-    <img src="/Paint4.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
+    <img src="/babu.jpg" style="width:100%;max-width:1000px;margin-top:32px;">
   </div>
 </div>
 
