--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ body, html {
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
-    <marquee behavior="scroll" direction="left">Open from 8am to 8pm, ContactNo: 9837347759 </marquee>
-    <marquee behavior="scroll" direction="Right">Colours which you Love </marquee>   
+    <marquee behavior="scroll" direction="left" color="white">Open from 8am to 8pm, ContactNo: 9837347759 </marquee>
+    <marquee behavior="scroll" direction="Right" color="white">Colours which you Love </marquee>   
   </div>
   <div class="w3-display-middle w3-center">
     <span class="w3-text-white" style="font-size:50px">New Royal Paints Shop<br>Bijnor</span>
