--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body, html {
     <span class="w3-text-white" style="font-size:50px">New Royal Paints Shop<br>Bijnor</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">Civil line,Bijnor 246701</span>
+    <span class="w3-text-white">Infront Of HDFC Bank ,Civil line,Bijnor 246701</span>
   </div>
 </header>
 
@@ -62,12 +62,11 @@ body, html {
 <!-- About Container -->
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT THE CAFE</span></h5>
-    <p>The Cafe was founded in bijnor by Mr. Wajid in uttar pradesh, India. The son of Abrar Ahmad who is extremly talented in electronic. </p>
-    <p>In addition to our full Desi Food and menu, we serve fresh made-to-order breakfast and lunch sandwiches, as well as a selection of sides and salads and other good stuff.</p>
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT MY SHOP</span></h5>
+    <p>The Shop was founded by Mr. Suleman in Bijnor, uttar pradesh, India. The son of Mr. Akhtar who has extremly talented in doing buisness. </p>
+    <p>In addition to our New Royal Paint Shop,we believe in an attitude of innovating perpetually. This belief has helped us to constantly challenge our existing paradigms and perform at improved higher levels. And the guiding company values of "Performance, Customer First, Ethical Practices and Valuing People", emerge from this belief. Employees of Berger endeavour to maintain a unique culture of co-operation and camaraderie, fun at workplace and pride in our achievements while working in the organization. There is transparency in our communication and this reflects in shared accountability for our business goals, our aggressiveness in pursuing these goals and our adaptability in finding new and better products and ways to work.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
-      <p><i>"Use products from nature for what it's worth - but never too early, nor too late." Fresh is the new sweet.</i></p>
-      <p>Chef, Coffeeist and Owner: Liam Brown</p>
+      <p><i>"Use products from nature for what it's worth - but never too early, nor too late."</i></p>
     </div>
     <img src="/Paint2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
