--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body, html {
     <span class="w3-text-white" style="font-size:50px">New Royal Paints Shop<br>Bijnor</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <span class="w3-text-white">Infront Of HDFC Bank ,Civil line,Bijnor 246701</span>
+    <span class="w3-text-white">Infront Of HDFC Bank, Civil line, Bijnor-246701</span>
   </div>
 </header>
 
@@ -64,32 +64,32 @@ body, html {
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT MY SHOP</span></h5>
     <p>The Shop was founded by Mr. Suleman in Bijnor, uttar pradesh, India. The son of Mr. Akhtar who has extremly talented in doing buisness. </p>
-    <p>In addition to our New Royal Paint Shop,we believe in an attitude of innovating perpetually. This belief has helped us to constantly challenge our existing paradigms and perform at improved higher levels. And the guiding company values of "Performance, Customer First, Ethical Practices and Valuing People", emerge from this belief. Employees of Berger endeavour to maintain a unique culture of co-operation and camaraderie, fun at workplace and pride in our achievements while working in the organization. There is transparency in our communication and this reflects in shared accountability for our business goals, our aggressiveness in pursuing these goals and our adaptability in finding new and better products and ways to work.</p>
+    <p>In addition to our New Royal Paint Shop, We believe in an attitude of innovating perpetually. This belief has helped us to constantly challenge our existing paradigms and perform at improved higher levels. And the guiding company values of "Performance, Customer First, Ethical Practices and Valuing People", emerge from this belief. </p>
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>"Use products from nature for what it's worth - but never too early, nor too late."</i></p>
     </div>
     <img src="/Paint2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
-    <p><strong>Address:</strong> civil Line, Bijnor, 2476701 UP, India</p>
+    <p><strong>Address:</strong> Infront Of HDFC Bank, civil Line, Bijnor-2476701, U.P, INDIA</p>
   </div>
 </div>
 
 <!-- Menu Container -->
-<div class="w3-container" id="menu">
+<div class="w3-container" id="Products">
   <div class="w3-content" style="max-width:700px">
  
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">THE MENU</span></h5>
+    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">PRODUCTS</span></h5>
   
     <div class="w3-row w3-center w3-card w3-padding">
-      <a href="javascript:void(0)" onclick="openMenu(event, 'Eat');" id="myLink">
+      <a href="javascript:void(0)" onclick="openMenu(event, 'Paints');" id="myLink">
         <div class="w3-col s6 tablink">Eat</div>
       </a>
-      <a href="javascript:void(0)" onclick="openMenu(event, 'Drinks');">
+      <a href="javascript:void(0)" onclick="openMenu(event, 'Others');">
         <div class="w3-col s6 tablink">Drink</div>
       </a>
     </div>
 
-    <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
+    <div id="Paints" class="w3-container menu w3-padding-48 w3-card">
       <h5>Paratha</h5>
       <p class="w3-text-grey">All kind of parathas 5.50</p><br>
     
