--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@ body, html {
   
     <div class="w3-row w3-center w3-card w3-padding">
       <a href="javascript:void(0)" onclick="openMenu(event, 'Paints');" id="myLink">
-        <div class="w3-col s6 tablink">Eat</div>
+        <div class="w3-col s6 tablink">Paints</div>
       </a>
       <a href="javascript:void(0)" onclick="openMenu(event, 'Others');">
-        <div class="w3-col s6 tablink">Drink</div>
+        <div class="w3-col s6 tablink">Others</div>
       </a>
     </div>
 
