--- a/index.html
+++ b/index.html
@@ -63,14 +63,16 @@ body, html {
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT MY SHOP</span></h5>
-    <p>The Shop was founded by Mr. Suleman in Bijnor, uttar pradesh, India. The son of Mr. Akhtar who has extremly talented in doing buisness. </p>
+    <p>The Shop was founded by Mr. Suleman Akhtar in Bijnor, uttar pradesh, India. The son of Mr. Akhtar who has been extremly talented in doing buisness. </p>
     <p>In addition to our New Royal Paint Shop, We believe in an attitude of innovating perpetually. This belief has helped us to constantly challenge our existing paradigms and perform at improved higher levels. And the guiding company values of "Performance, Customer First, Ethical Practices and Valuing People", emerge from this belief. </p>
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>"Use products from nature for what it's worth - but never too early, nor too late."</i></p>
     </div>
     <img src="/Paint2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
-    <p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>
+    <p><strong>Opening hours:</strong> everyday from 8pm to 8pm.</p>
     <p><strong>Address:</strong> Infront Of HDFC Bank, civil Line, Bijnor-2476701, U.P, INDIA</p>
+    <p><strong>Contact:</strong> +91-9837347759 </p>
+    <p><strong>Owner:</strong> Mr. Suleman Akhtar </p>
   </div>
 </div>
 
@@ -85,7 +87,8 @@ body, html {
 <div class="w3-container" id="where" style="padding-bottom:32px;">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WHERE TO FIND US</span></h5>
-    <p>Find us at some address at some place.</p>
+    <li><a href="https://www.google.com/maps/place/New+Royal+Traders/@29.3795037,78.1383345,19z/data=!3m1!4b1!4m5!3m4!1s0x390bee46af6c5a17:0x4cb012ac8388746b!8m2!3d29.3795037!4d78.1388817">Click here to find</a></li>
+    
     <img src="/Paint1.jpg" class="w3-image" style="width:100%">
     <p><span class="w3-tag">FYI!</span> “A satisfied customer is one who will continue to buy from you, seldom shop around, refer other customers and in general be a superstar advocate for your business.” ~ Gregory Ciotti</p>
     <p><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
