--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body, html {
       <a href="#about" class="w3-button w3-block w3-black">ABOUT</a>
     </div>
     <div class="w3-col s3">
-      <a href="#menu" class="w3-button w3-block w3-black">PRODUCTS</a>
+      <a href="#Products" class="w3-button w3-block w3-black">PRODUCTS</a>
     </div>
     <div class="w3-col s3">
       <a href="#where" class="w3-button w3-block w3-black">WHERE</a>
@@ -45,14 +45,14 @@ body, html {
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
-    <marquee behavior="scroll" direction="left" color="white">Open from 8am to 8pm, ContactNo: 9837347759 </marquee>
-    <marquee behavior="scroll" direction="Right" color="white">Colours which you Love </marquee>   
+    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Open from 8am to 8pm, ContactNo: 9837347759 </marquee>
+    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">Colours which you Love </marquee>   
   </div>
   <div class="w3-display-middle w3-center">
     <span class="w3-text-white" style="font-size:50px">New Royal Paints Shop<br>Bijnor</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <marquee behavior="scroll"  color="white" direction="Right">Infront Of HDFC Bank, Civil line, Bijnor-246701 </marquee>
+    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">Infront Of HDFC Bank, Civil line, Bijnor-246701 </marquee>
   </div>
 </header>
 
