--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body, html {
     <span class="w3-text-white" style="font-size:50px">New Royal Paints Shop<br>Bijnor</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
-    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">Infront Of HDFC Bank, Civil line, Bijnor-246701 </marquee>
+    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Infront Of HDFC Bank, Civil line, Bijnor-246701 </marquee>
   </div>
 </header>
 
