--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@ body, html {
         <textarea name="comments" rows = "12" cols = "35">Send your comments to owner.</textarea>
         <br>
       <p><input type="submit" name="submit" value="Send" />
+        <form action="mailto:myforms@mydomain.com" 
+         enctype="text/plain" onsubmit="location.href='thanks.html';" >
         <input type="reset" name="reset" value="Clear Form" />
       </p>
     </form>
