--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ body, html {
     <p><span class="w3-tag">FYI!</span> “A satisfied customer is one who will continue to buy from you, seldom shop around, refer other customers and in general be a superstar advocate for your business.” ~ Gregory Ciotti</p>
     <p><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
      <body>
-    <h2> Give Feedback About Products.</h2>
-    <form action="mailto:wajidali3301@gmail.com" method="get" enctype="text/plain">
+    <h2> Give Feedback About Our Products.</h2>
+    <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
       <p>Name: <input type="text" name="name"/></p>
       <p>Email: <input type="text" name="email"/></p>
       <p>Comments:
@@ -101,7 +101,7 @@ body, html {
         <textarea name="comments" rows = "12" cols = "35">Send your comments to owner.</textarea>
         <br>
       <p><input type="submit" name="submit" value="Send" />
-        <form action="mailto:myforms@mydomain.com" 
+        <form action="mailto:Mdsulemanroayl23@gmail.com" 
          enctype="text/plain" onsubmit="location.href='thanks.html';" >
         <input type="reset" name="reset" value="Clear Form" />
       </p>
