--- a/index.html
+++ b/index.html
@@ -90,13 +90,12 @@ body, html {
     
     <img src="/Paint1.jpg" class="w3-image" style="width:100%">
     <p><span class="w3-tag">FYI!</span> “A satisfied customer is one who will continue to buy from you, seldom shop around, refer other customers and in general be a superstar advocate for your business.” ~ Gregory Ciotti</p>
-    <p><strong>Reserve</strong> a table, ask for today's special or just send us a message:</p>
      <body>
     <h2> Give Feedback About Our Products.</h2>
     <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
-      <p>Name: <input type="text" name="name"/></p>
-      <p>Email: <input type="text" name="email"/></p>
-      <p>Comments:
+      <p><strong>Name: <input type="text" name="name"/></p>
+      <p><strong>Email: <input type="text" name="email"/></p>
+      <p><strong>Comments:
         <br />
         <textarea name="comments" rows = "12" cols = "35">Send your comments to owner.</textarea>
         <br>
