--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body, html {
       <p><i>"Use products from nature for what it's worth - but never too early, nor too late."</i></p>
     </div>
     <img src="/Paint2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
-    <p><strong>Opening hours:</strong> everyday from 8pm to 8pm.</p>
+    <p><strong>Opening hours:</strong> everyday from 8am to 8pm.</p>
     <p><strong>Address:</strong> Infront Of HDFC Bank, civil Line, Bijnor-2476701, U.P, INDIA</p>
     <p><strong>Contact:</strong> +91-9837347759 </p>
     <p><strong>Owner:</strong> Mr. Suleman Akhtar </p>
