--- a/webapp/index.html
+++ b/webapp/index.html
@@ -25,6 +25,20 @@ body, html {
 <body>
 <!-- Links (sit on top) -->
 
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
 .dropdown {
   float: left;
   overflow: hidden;
