--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,29 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+
 <style>
 body, html {
   height: 100%;
   font-family: "Inconsolata", sans-serif;
   }
-
-.bgimg {
+  
+ .bgimg {
   background-position: center;
   background-size: cover;
   background-image: url("/Paint1.jpg");
   min-height: 75%;
-}
-
-.menu {
-  display: none;
- }
-</style>
-<body>
-<!-- Links (sit on top) -->
-
-.navbar {
-  overflow: hidden;
-  background-color: #333;
 }
 
 .navbar a {
@@ -88,7 +77,7 @@ body, html {
 </head>
 <body>
 
-<div class="navbar">
+<div class="w3-top">
   <a href="#home">Home</a>
   <a href="#news">News</a>
   <div class="dropdown">
@@ -101,10 +90,20 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div> 
+  <div class="dropdown">
+    <button class="dropbtn">App 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+      <a href="#">Link 4</a>
+    </div>
+  </div> 
 </div>
 
 <!-- Header with image -->
-<header class="bgimg w3-display-container w3-grayscale-min" id="home">
+<header class="bgimg w3-display-container w3-grayscale-min">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Open from 8am to 8pm </marquee>
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">Colours which you Love </marquee>   
@@ -121,7 +120,7 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
 
 <!-- About Container -->
-<div class="w3-container" id="about">
+<div class="w3-container">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT MY SHOP</span></h5>
     <p>The Shop was founded by Mr. Suleman Akhtar in Bijnor, uttar pradesh, India. The son of Mr. Akhtar who has been extremly talented in doing buisness. </p>
@@ -138,14 +137,14 @@ body, html {
 </div>
 
 <!-- Menu Container -->
-<div class="w3-container" id="Products">
+<div class="w3-container">
   <div class="w3-content" style="max-width:700px">
  
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">PRODUCTS</span></h5>
     <li><a href="https://www.bergerpaints.com/utility-tools/product-finder/">Click here for Products</a></li>
 
 <!-- Contact/Area Container -->
-<div class="w3-container" id="where" style="padding-bottom:32px;">
+<div class="w3-container" style="padding-bottom:32px;">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WHERE TO FIND US</span></h5>
     <li><a href="https://www.google.com/maps/place/New+Royal+Traders/@29.3795037,78.1383345,19z/data=!3m1!4b1!4m5!3m4!1s0x390bee46af6c5a17:0x4cb012ac8388746b!8m2!3d29.3795037!4d78.1388817">Click here to find</a></li>
