--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,22 +1,16 @@
 <!DOCTYPE html>
 <html>
-<title>New Royal Paints</title>
-<meta charset="UTF-8">
+<head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body, html {
-  height: 100%;
-  font-family: "Inconsolata", sans-serif;
-  }
-  
- .bgimg {
-  background-position: center;
-  background-size: cover;
-  background-image: url("/Paint1.jpg");
-  min-height: 75%;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
 }
 
 .navbar a {
@@ -77,7 +71,7 @@ body, html {
 </head>
 <body>
 
-<div class="w3-top">
+<div class="navbar">
   <a href="#home">Home</a>
   <a href="#news">News</a>
   <div class="dropdown">
@@ -90,17 +84,8 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div> 
-  <div class="dropdown">
-    <button class="dropbtn">App 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-      <a href="#">Link 4</a>
-    </div>
-  </div> 
 </div>
+
 
 <!-- Header with image -->
 <header class="bgimg w3-display-container w3-grayscale-min">
@@ -197,3 +182,4 @@ document.getElementById("myLink").click();
 </script>
 </body>
 </html>
+
