--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,6 +7,12 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+.bgimg {
+  background-position: center;
+  background-size: cover;
+  background-image: url("/Paint1.jpg");
+  min-height: 75%;
+}
 
 .navbar {
   overflow: hidden;
