--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,9 +6,10 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 <style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
+body, html {
+  height: 100%;
+  font-family: "Inconsolata", sans-serif;
+  }
 .bgimg {
   background-position: center;
   background-size: cover;
