--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,7 +40,7 @@ body, html {
   font-size: 16px;  
   border: none;
   outline: none;
-  color: white;
+  color: yellow;
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
