--- a/webapp/index.html
+++ b/webapp/index.html
@@ -88,8 +88,8 @@ body, html {
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
+      <a href="https://www.facebook.com/">Facebook</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a>
       <a href="#">Link 3</a>
     </div>
   </div> 
@@ -97,7 +97,7 @@ body, html {
 
 
 <!-- Header with image -->
-<header class="bgimg w3-display-container w3-grayscale-min">
+<header class="bgimg w3-display-container w3-grayscale-min" id="Home">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Open from 8am to 8pm </marquee>
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">Colours which you Love </marquee>   
