--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,16 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
 body, html {
   height: 100%;
   font-family: "Inconsolata", sans-serif;
   }
+  
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("/Paint1.jpg");
+  background-image: url("/w3images/coffeehouse.jpg");
   min-height: 75%;
 }
 
@@ -40,7 +42,7 @@ body, html {
   font-size: 16px;  
   border: none;
   outline: none;
-  color: yellow;
+  color: white;
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
@@ -83,7 +85,7 @@ body, html {
 <div class="navbar">
   <a href="#home">Home</a>
   <a href="#news">News</a>
-  <div class="dropdown">
+   <div class="dropdown">
     <button class="dropbtn">Dropdown 
        <i class="fa fa-caret-down"></i>
     </button>
@@ -191,4 +193,3 @@ document.getElementById("myLink").click();
 </script>
 </body>
 </html>
-
