--- a/index.html
+++ b/index.html
@@ -1,48 +1,105 @@
 <!DOCTYPE html>
 <html>
-<title>New Royal Paints</title>
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <style>
 body, html {
   height: 100%;
   font-family: "Inconsolata", sans-serif;
   }
-
+  
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("/Paint1.jpg");
+  background-image: url("/w3images/coffeehouse.jpg");
   min-height: 75%;
 }
 
-.menu {
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+.dropdown-content {
   display: none;
- }
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 </style>
+</head>
 <body>
-<!-- Links (sit on top) -->
-<div class="w3-top">
-  <div class="w3-row w3-padding w3-black">
-    <div class="w3-col s3">
-      <a href="#" class="w3-button w3-block w3-black">HOME</a>
+
+<div class="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+   <div class="dropdown">
+    <button class="dropbtn">Dropdown 
+       <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="https://www.facebook.com/">Facebook</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a>
+      <a href="#">Link 3</a>
     </div>
-    <div class="w3-col s3">
-      <a href="#about" class="w3-button w3-block w3-black">ABOUT</a>
-    </div>
-    <div class="w3-col s3">
-      <a href="#Products" class="w3-button w3-block w3-black">PRODUCTS</a>
-    </div>
-    <div class="w3-col s3">
-      <a href="#where" class="w3-button w3-block w3-black">WHERE</a>
-    </div>
-  </div>
+  </div> 
 </div>
 
+
 <!-- Header with image -->
-<header class="bgimg w3-display-container w3-grayscale-min" id="home">
+<header class="bgimg w3-display-container w3-grayscale-min" id="Home">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Open from 8am to 8pm </marquee>
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">Colours which you Love </marquee>   
@@ -59,7 +116,7 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
 
 <!-- About Container -->
-<div class="w3-container" id="about">
+<div class="w3-container">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT MY SHOP</span></h5>
     <p>The Shop was founded by Mr. Suleman Akhtar in Bijnor, uttar pradesh, India. The son of Mr. Akhtar who has been extremly talented in doing buisness. </p>
@@ -76,14 +133,14 @@ body, html {
 </div>
 
 <!-- Menu Container -->
-<div class="w3-container" id="Products">
+<div class="w3-container">
   <div class="w3-content" style="max-width:700px">
  
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">PRODUCTS</span></h5>
     <li><a href="https://www.bergerpaints.com/utility-tools/product-finder/">Click here for Products</a></li>
 
 <!-- Contact/Area Container -->
-<div class="w3-container" id="where" style="padding-bottom:32px;">
+<div class="w3-container" style="padding-bottom:32px;">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WHERE TO FIND US</span></h5>
     <li><a href="https://www.google.com/maps/place/New+Royal+Traders/@29.3795037,78.1383345,19z/data=!3m1!4b1!4m5!3m4!1s0x390bee46af6c5a17:0x4cb012ac8388746b!8m2!3d29.3795037!4d78.1388817">Click here to find</a></li>
