--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("/w3images/coffeehouse.jpg");
+  background-image: url("/paint1.jpg");
   min-height: 75%;
 }
 
