--- a/webapp/index.html
+++ b/webapp/index.html
@@ -99,7 +99,7 @@ body, html {
 
 
 <!-- Header with image -->
-<header class="bgimg w3-display-container w3-grayscale-min" id="Home">
+<header class="bgimg w3-display-container w3-grayscale-min" id="#Home">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Open from 8am to 8pm </marquee>
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">Colours which you Love </marquee>   
