--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,7 +15,7 @@ body, html {
 .bgimg {
   background-position: center;
   background-size: cover;
-  background-image: url("/w3images/coffeehouse.jpg");
+  background-image: url("/Paint1.jpg");
   min-height: 75%;
 }
 
@@ -90,7 +90,7 @@ body, html {
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="https://www.facebook.com/">Facebook</a>
+      <a href="http://linuxhero.tk/webapp/">webapp</a>
       <a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a>
       <a href="#">Link 3</a>
     </div>
@@ -99,13 +99,13 @@ body, html {
 
 
 <!-- Header with image -->
-<header class="bgimg w3-display-container w3-grayscale-min" id="#Home">
+<header class="bgimg w3-display-container w3-grayscale-min" id="Home">
   <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Open from 8am to 8pm </marquee>
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">Colours which you Love </marquee>   
   </div>
   <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:50px">This is WEbapp<br>Created</span>
+    <span class="w3-text-white" style="font-size:50px">New Royal Paints Shop<br>Bijnor</span>
   </div>
   <div class="w3-display-bottomright w3-center w3-padding-large">
     <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Infront Of HDFC Bank, Civil line, Bijnor-246701,  ContactNo: 9837347759 </marquee>
