--- a/index.html
+++ b/index.html
@@ -84,14 +84,23 @@ body, html {
 
 <div class="navbar">
   <a href="#home">Home</a>
-  <a href="#news">News</a>
    <div class="dropdown">
-    <button class="dropbtn">Linux Topics 
+    <button class="dropbtn">Linux 
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
       <a href="http://linuxhero.tk/webapp/">What is Linux?</a>
       <a href="https://mail.google.com/mail/u/0/#inbox">Linux Commands</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div> 
+  <div class="dropdown">
+    <button class="dropbtn">Devops 
+       <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
       <a href="#">Link 3</a>
     </div>
   </div> 
