--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@ body, html {
     </div>
   </div> 
   <div class="dropdown">
+    <button class="dropbtn">Linux Troubleshooting 
+       <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
+      <a href="#">Link 3</a>
+    </div>
+  <div class="dropdown">
     <button class="dropbtn">Devops 
        <i class="fa fa-caret-down"></i>
     </button>
