--- a/index.html
+++ b/index.html
@@ -113,7 +113,17 @@ body, html {
       <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
       <a href="#">Link 3</a>
     </div>
-  </div> 
+  </div>
+  <div class="dropdown">
+    <button class="dropbtn">Monitoring Tools 
+       <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
   <a href="#about">About us</a>
   <a href="#contact">Contact us</a>
 </div>
