--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
-  <a href="#about">About us</a>
+  <a href="#about">About Me</a>
   <a href="#contact">Contact us</a>
 </div>
 
@@ -147,13 +147,13 @@ body, html {
 <div class="w3-sand w3-grayscale w3-large">
 
 <!-- About Container -->
-<div class="w3-container">
+<div class="w3-container" id="about me">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT MY SHOP</span></h5>
-    <p>The Shop was founded by Mr. Suleman Akhtar in Bijnor, uttar pradesh, India. The son of Mr. Akhtar who has been extremly talented in doing buisness. </p>
-    <p>In addition to our New Royal Paint Shop, We believe in an attitude of innovating perpetually. This belief has helped us to constantly challenge our existing paradigms and perform at improved higher levels. And the guiding company values of "Performance, Customer First, Ethical Practices and Valuing People", emerge from this belief. </p>
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT ME</span></h5>
+    <p>Over 6+ years Experienced in Linux with a demonstrated history of working in the information technology and services industry. Responsible for maintaining the health, integrity, availability, and security of all the Linux os systems globally. Apply appropriate problem solving techniques to solve complex production problems and assist with the root cause analysis. Work in a team environment to deploy solution with my knowledge.</p>
+    <p>In addition to install and configure solutions, implement reusable components, translate technical requirements, assist with all stages of test data, develop interface stubs and simulators and perform script maintenance and updates.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
-      <p><i>"Use products from nature for what it's worth - but never too early, nor too late."</i></p>
+      <p><i>"Share your knowledge. It’s a way to achieve immortality." ~ Dalai Lama (1357 – 1419, high lama of Tibetan Buddhism)</i></p>
     </div>
     <img src="/Paint2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 8am to 8pm.</p>
