--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ body, html {
     <div class="w3-panel w3-leftbar w3-light-grey">
       <p><i>"Share your knowledge. It’s a way to achieve immortality." ~ Dalai Lama (1357 – 1419, high lama of Tibetan Buddhism)</i></p>
     </div>
-    <img src="/Paint2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
+    <img src="/linux.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
     <p><strong>Opening hours:</strong> everyday from 8am to 8pm.</p>
     <p><strong>Address:</strong> Infront Of HDFC Bank, civil Line, Bijnor-2476701, U.P, INDIA</p>
     <p><strong>Contact:</strong> +91-9837347759 </p>
