--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
-  <a href="#about">About Me</a>
-  <a href="#contact">Contact us</a>
-</div>
+  <div class="w3-col s3">
+    <a href="#about" class="w3-button w3-block w3-black">About Me</a>
+    <a href="#contact">Contact us</a>
+  </div>
 
 
 <!-- Header with image -->
@@ -143,7 +144,6 @@ body, html {
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
   
- 
 <!-- About Container -->
 <div class="w3-container" id="About me">
   <div class="w3-content" style="max-width:700px">
@@ -154,10 +154,6 @@ body, html {
       <p><i>"Share your knowledge. It’s a way to achieve immortality." ~ Dalai Lama (1357 – 1419, high lama of Tibetan Buddhism)</i></p>
     </div>
     <img src="/linux.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
-    <p><strong>Opening hours:</strong> everyday from 8am to 8pm.</p>
-    <p><strong>Address:</strong> Infront Of HDFC Bank, civil Line, Bijnor-2476701, U.P, INDIA</p>
-    <p><strong>Contact:</strong> +91-9837347759 </p>
-    <p><strong>Owner:</strong> Mr. Suleman Akhtar </p>
   </div>
 </div>
 
