--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@ body, html {
       <a href="#">Link 3</a>
     </div>
   </div>
-    <div class = "navbar">
-    <a href="#about" class="w3-button w3-block w3-black">About Me</a>
+    <a href="#about">About Me</a>
     <a href="#contact">Contact us</a>
   </div>
 
