--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ body, html {
   </div>
     <a href="#Topics">New Topics</a>
     <a href="#about">About</a>
-    <a href="#contact">Contact us</a>
+    <a href="#contact">Contact Us</a>
   </div>
 
 
@@ -157,9 +157,8 @@ body, html {
     <p>Over 6+ years Experienced in Linux with a demonstrated history of working in the information technology and services industry. Responsible for maintaining the health, integrity, availability, and security of all the Linux os systems globally. Apply appropriate problem solving techniques to solve complex production problems and assist with the root cause analysis. Work in a team environment to deploy solution with my knowledge.</p>
     <p>In addition to install and configure solutions, implement reusable components, translate technical requirements, assist with all stages of test data, develop interface stubs and simulators and perform script maintenance and updates.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
-      <p><i>"Share your knowledge. It’s a way to achieve immortality." ~ Dalai Lama (1357 – 1419, high lama of Tibetan Buddhism)</i></p>
+      <p><i>"If you have knowledge, let others light their candles in it." ~ Margaret Fuller</i></p>
     </div>
-    <img src="/linux.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
   </div>
 </div>
 
@@ -167,8 +166,9 @@ body, html {
 
 
 <!-- Contact/Area Container -->
-
-    <h2> Give Feedback About Our Products.</h2>
+ 
+<div class="w3-container" id="contact">
+    <h2>Please email me if you face any issue.</h2>
     <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
       <p><strong>Name: <input type="text" name="name"/></p>
       <p><strong>Email: <input type="text" name="email"/></p>
