--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,14 +11,7 @@ body, html {
   height: 100%;
   font-family: "Inconsolata", sans-serif;
   }
-  
-.bgimg {
-  background-position: center;
-  background-size: cover;
-  background-image: url("/Paint1.jpg");
-  min-height: 75%;
-}
-
+  <!-----------TOP MENU-----------------------!>
 .navbar {
   overflow: hidden;
   background-color: #333;
@@ -83,72 +76,78 @@ body, html {
 <body>
 
 <div class="navbar">
-  <a href="http://linuxhero.tk/">Home</a>
-  <a href="#news">News</a>
+  <a href="http://linuxhero.tk/#home">Home</a>
    <div class="dropdown">
-    <button class="dropbtn">Dropdown 
+     <button class="dropbtn">Linux 
+        <i class="fa fa-caret-down"></i>
+     </button>
+     <div class="dropdown-content">
+      <a href="http://linuxhero.tk/Whatislinux?/">What is Linux?</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">Linux Commands</a>
+      <a href="#">Link 3</a>
+     </div>
+    </div> 
+   <div class="dropdown">
+    <button class="dropbtn">Linux Troubleshooting 
+       <i class="fa fa-caret-down"></i>
+     </button>
+     <div class="dropdown-content">
+      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
+      <a href="#">Link 3</a>
+     </div>
+    </div>
+   <div class="dropdown">
+    <button class="dropbtn">Devops 
        <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="http://linuxhero.tk/webapp/">webapp</a>
-      <a href="https://mail.google.com/mail/u/0/#inbox">Gmail</a>
+      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
       <a href="#">Link 3</a>
     </div>
-  </div> 
-</div>
+  </div>
+  <div class="dropdown">
+    <button class="dropbtn">Monitoring Tools 
+       <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="http://linuxhero.tk/webapp/">What is devops?</a>
+      <a href="https://mail.google.com/mail/u/0/#inbox">What are the tools of devops?</a>
+      <a href="#">Link 3</a>
+    </div>
+  </div>
+    <a href="http://linuxhero.tk/#Topics">New Topics</a>
+    <a href="http://linuxhero.tk/#about">About</a>
+    <a href="http://linuxhero.tk/#contact">Contact Us</a>
+  </div>
 
 
-<!-- Header with image -->
-<header class="bgimg w3-display-container w3-grayscale-min">
-  <div class="w3-display-bottomleft w3-center w3-padding-large w3-hide-small">
-    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Open from 8am to 8pm </marquee>
-    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="Right">Colours which you Love </marquee>   
-  </div>
-  <div class="w3-display-middle w3-center">
-    <span class="w3-text-white" style="font-size:50px">This is my site created<br>Now</span>
-  </div>
-  <div class="w3-display-bottomright w3-center w3-padding-large">
-    <marquee behavior="scroll" bgcolor="#d9d9ff" direction="left">Infront Of HDFC Bank, Civil line, Bijnor-246701,  ContactNo: 9837347759 </marquee>
-  </div>
-</header>
+
 
 <!-- Add a background color and large text to the whole page -->
 <div class="w3-sand w3-grayscale w3-large">
-
-<!-- About Container -->
+  
+     
+<!-- Content -->
 <div class="w3-container">
   <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT MY SHOP</span></h5>
-    <p>The Shop was founded by Mr. Suleman Akhtar in Bijnor, uttar pradesh, India. The son of Mr. Akhtar who has been extremly talented in doing buisness. </p>
-    <p>In addition to our New Royal Paint Shop, We believe in an attitude of innovating perpetually. This belief has helped us to constantly challenge our existing paradigms and perform at improved higher levels. And the guiding company values of "Performance, Customer First, Ethical Practices and Valuing People", emerge from this belief. </p>
+    <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">What is Linux?</span></h5>
+    <p>Over 6+ years Experienced in Linux with a demonstrated history of working in the information technology and services industry. Responsible for maintaining the health, integrity, availability, and security of all the Linux os systems globally. Apply appropriate problem solving techniques to solve complex production problems and assist with the root cause analysis. Work in a team environment to deploy solution with my knowledge.</p>
+    <p>In addition to install and configure solutions, implement reusable components, translate technical requirements, assist with all stages of test data, develop interface stubs and simulators and perform script maintenance and updates.</p>
     <div class="w3-panel w3-leftbar w3-light-grey">
-      <p><i>"Use products from nature for what it's worth - but never too early, nor too late."</i></p>
+      <p><i>"If you have knowledge, let others light their candles in it." ~ Margaret Fuller</i></p>
     </div>
-    <img src="/Paint2.jpg" style="width:100%;max-width:1000px" class="w3-margin-top">
-    <p><strong>Opening hours:</strong> everyday from 8am to 8pm.</p>
-    <p><strong>Address:</strong> Infront Of HDFC Bank, civil Line, Bijnor-2476701, U.P, INDIA</p>
-    <p><strong>Contact:</strong> +91-9837347759 </p>
-    <p><strong>Owner:</strong> Mr. Suleman Akhtar </p>
   </div>
 </div>
 
 <!-- Menu Container -->
-<div class="w3-container">
-  <div class="w3-content" style="max-width:700px">
- 
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">PRODUCTS</span></h5>
-    <li><a href="https://www.bergerpaints.com/utility-tools/product-finder/">Click here for Products</a></li>
+
 
 <!-- Contact/Area Container -->
-<div class="w3-container" style="padding-bottom:32px;">
-  <div class="w3-content" style="max-width:700px">
-    <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">WHERE TO FIND US</span></h5>
-    <li><a href="https://www.google.com/maps/place/New+Royal+Traders/@29.3795037,78.1383345,19z/data=!3m1!4b1!4m5!3m4!1s0x390bee46af6c5a17:0x4cb012ac8388746b!8m2!3d29.3795037!4d78.1388817">Click here to find</a></li>
-    
-    <img src="/Paint1.jpg" class="w3-image" style="width:100%">
-    <p><span class="w3-tag">FYI!</span> “A satisfied customer is one who will continue to buy from you, seldom shop around, refer other customers and in general be a superstar advocate for your business.” ~ Gregory Ciotti</p>
-     <body>
-    <h2> Give Feedback About Our Products.</h2>
+ 
+<div class="w3-container" id="contact">
+    <h2>Please email me if you face any issue.</h2>
     <form action="mailto:Mdsulemanroayl23@gmail.com" method="get" enctype="text/plain">
       <p><strong>Name: <input type="text" name="name"/></p>
       <p><strong>Email: <input type="text" name="email"/></p>
